fix overflow-x of app to hidden

--- a/src/App.css
+++ b/src/App.css
@@ -8,4 +8,5 @@
 
 .App {
   font-family: 'Poppins', sans-serif;
+  overflow-x: hidden;
 }
